feat: openAPI3 adicionado e tratamento de excessoes feitos